--- a/landing.html
+++ b/landing.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Filebox</title>
+  <title>My Working Copy of Filebox</title>
 
   <meta charset="utf-8">
 
   <!-- Connect to Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css"> -->
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
 
   <!-- Connect to Font Awesome CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -28,6 +28,216 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,300italic,400italic,600italic,700italic,800,800italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <h1>Good luck!</h1>
+
+  <!-- <h1>Good luck!</h1>
+
+  <style>
+    .my_button {
+      /*background-color: blue;*/
+      color: white;
+      font-family: "Open Sans";
+      font-weight: 700;
+      padding-left: 5em;
+      padding-right: 5em;
+      padding-top: 0.6em;
+      padding-bottom: 0.6em;
+      border-style: none;
+      border-radius: 4px;
+
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#499bea+0,207ce5+100;Blue+3d+%237 */
+      background: #499bea; /* Old browsers */
+      background: -moz-linear-gradient(top,  #499bea 0%, #207ce5 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top,  #499bea 0%,#207ce5 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom,  #499bea 0%,#207ce5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5',GradientType=0 ); /* IE6-9 */
+    }
+
+    .my_button:hover {
+       /*Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#207ce5+0,499bea+100 */
+      background: #207ce5; /* Old browsers */
+      background: -moz-linear-gradient(top,  #207ce5 0%, #499bea 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top,  #207ce5 0%,#499bea 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom,  #207ce5 0%,#499bea 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207ce5', endColorstr='#499bea',GradientType=0 ); /* IE6-9 */
+    }
+
+    .icon-padding {
+      padding-right: 1em;
+    }
+
+    </style>
+
+  <button class="my_button">
+      <i class="fa fa-bar-chart icon-padding" aria-hidden="true">
+      </i>
+      Sign up with Google
+  </button> -->
+
+
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!--tool to build page structure:  shoelace.io*/ -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-offset-1 col-md-10">
+            <img src="assets/images/hero.png" class="img-responsive"
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          <h2>
+            Filebox works the way you do
+          </h2>
+          <p>
+            Get to all your files from anywhere, on any device, and share them with anyone.
+          </p>
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+
+          <!-- http://getbootstrap.com/css/#forms -->
+
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputFile">File input</label>
+              <input type="file" id="exampleInputFile">
+              <p class="help-block">Example block-level help text here.</p>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Check me out
+              </label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          3
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+          4
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          5
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+          6
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          7
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+          8
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          9
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+          10
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-4">
+          11
+        </div>
+        <div class="col-md-offset-2 col-md-4">
+          12
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-4 col-md-4">
+          13
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+          14
+        </div>
+        <div class="col-md-2">
+          15
+        </div>
+        <div class="col-md-2">
+          16
+        </div>
+        <div class="col-md-2">
+          17
+        </div>
+        <div class="col-md-2">
+          18
+        </div>
+        <div class="col-md-2">
+          19
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
